# 8BitProcEmul

C8BitProcEmul/: CMakeLists.txt  main.c
C8BitProcEmul/comp/: ALU.c
C8BitProcEmul/dbm/: bit.c
C8BitProcEmul/include/: ALU.h  Register.h  bit.h  type.h
